package com.app.appcenter.shared.model.datamodel

enum class APKAvaialability {
    DOWNLOADING, DOWNLOADED, DOWNLOAD_FAILURE, DELETED, RE_TRY_CLICKED
}
